--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ span {
 }
 
 .introduction {
-    background-image: url("/img/background-img.png");
+    background-image: url("img/background-img.png");
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
